--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 dependencies = [
     "datasets",
     "weave==0.51.41",
+    "boto3",
     "huggingface-hub",
     "python-dotenv",
     "setuptools>=48.0.0",
